--- a/ulectrics-uofc/WebApp.csproj
+++ b/ulectrics-uofc/WebApp.csproj
@@ -5,6 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Model\" />
+    <Folder Include="Controller\" />
+    <Folder Include="View\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
